--- a/views/index.html
+++ b/views/index.html
@@ -12,10 +12,11 @@
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <!-- Javascript -->
         <script type="text/javascript" src="http://localhost:8080/static/script.js"></script>
+        <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
     </head>
     <body>
         <h1>Counter Display</h1>
-        <div id="counter_graph">
+        <div id="chart_graph" style="height: 450px; width: 100%;">
         </div>
         <h3 id="latest_counter">
         </h3>
